MB-2008-03-27-0: Task:      resource reset test
                 Issue:     #216 (hedeby)(added missing tests) 
                               /resources/reset/ambiguous/check.62.exp
                               /resources/reset/assigned/check.62.exp
                               /resources/reset/basic/batch/check.62.exp
                               /resources/reset/basic/parallel/check.62.exp
                               /resources/reset/basic/sequential/check.62.exp
                               /resources/reset/basic/unknown/check.62.exp
                 Enhancem.: o new procedure: get_component_info()
                            o new procedure: wait_for_component_info()
                            o new procedure: produce_unknown_resource()
                            o new procedure: compare_resource_infos()
                            o new procedure in sge_procedures.tcl: is_execd_alive()
                 Review:    RM

HP-2008-03-20-0: Bugfix:    Added version checking to HP-2008-03-19-0

AP-2008-03-20-0: Enhancem.: o ARCo supports SWC > 3.0 from SGE 6.2 version
                            o reporting installation - adding expected messages
                 Review:    JO

CR-2008-03-19-1: Task:      basic resource assignement test
                            (last part of check-in)
                 Issue:     #365 (hedeby)(added missing tests) 
                               /resources/move/error/check.62.exp
                               /resources/move/inprogress/check.62.exp
                               /resources/move/static/check.62.exp
                 Cleanup:   o removed not needed comments
                 Bugfix:    o wait_for_resource_info() and 
                              wait_for_service_info deleted upvared
                              error_text variable
                            o Removed usages of NOT existing procedure
                              ts_log_error()